tests/ui/parser/control_flow/expected_while.sol
function f() {
    do {} ; //~ ERROR: expected `while`, found `;`
}
